以上は改善後の全部の作業です

--- a/resources/application.properties
+++ b/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.hibernate.ddl-auto=update
 logging.file.name=logtest.txt
 
 file.upload-dir=${user.dir}/uploads
+
+# 単一ファイルの最大サイズ
+spring.servlet.multipart.max-file-size=50MB
+# リクエスト全体の最大サイズ
+spring.servlet.multipart.max-request-size=50MB
+# Tomcat の POST ボディ最大サイズ
+server.tomcat.max-swallow-size=50MB
+
